wdl-analysis/tests/validation/hints-unsupported.errors
error: use of the `hints` section requires WDL version 1.2
  ┌─ tests/validation/hints-unsupported:8:5
  │
8 │     hints {
  │     ^^^^^

error: use of the `hints` section requires WDL version 1.2
   ┌─ tests/validation/hints-unsupported:18:5
   │
18 │     hints {
   │     ^^^^^

